# Open4X

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  default.nix  flake.nix  license  open4x.nix
assets/: settings.json
assets/glTF/: BlueBox.gltf  animated_triangle.gltf  basic_sparse_triangles.gltf  basic_triangle.md  simple_animation.gltf  simple_meshes.gltf
assets/glTF/single/: simple_texture.gltf
assets/shaders/: box.frag  box.vert  cull.comp  cull_draw_pass.comp  cull_frustum_pass.comp  frustum_cull_objects.comp  prefix_sum_first_pass.comp  reduce_prefix_sum.comp  triangle.frag  triangle.vert
assets/shaders/compute/: cull_draw_pass.comp  cull_draws.comp  cull_frustum_pass.comp  cull_visibility_buffer.comp  frustum_cull_objects.comp  reduce_prefix_sum.comp
assets/shaders/graphics/: box.frag  box.vert  triangle.frag  triangle.vert
src/: Open4XGame.cpp  Open4XGame.hpp  Open4XVulkan.cpp  Open4XVulkan.hpp  main.cpp  main.hpp  open4x.cpp  open4x.hpp  utils.hpp
src/Better/: Renderer.hpp  open4x.cpp  open4x.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_descriptors.cpp  vulkan_descriptors.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_model.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_window.cpp  vulkan_window.hpp
src/Renderer/Allocator/: allocation.cpp  allocation.hpp  allocator.hpp  base_allocator.cpp  base_allocator.hpp  sub_allocator.hpp
src/Renderer/Vulkan/: buffer.cpp  buffer.hpp  buffers.cpp  buffers.hpp  camera.cpp  camera.hpp  command_pool_allocator.cpp  command_runner.cpp  command_runner.hpp  common.cpp  common.hpp  descriptor_manager.cpp  descriptor_manager.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  draw.cpp  draw.hpp  globals.hpp  image.cpp  image.hpp  light.cpp  light.hpp  memory_manager.cpp  memory_manager.hpp  model.cpp  model.hpp  model_manager.cpp  model_manager.hpp  object.cpp  object.hpp  object_manager.cpp  object_manager.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  rendergraph.cpp  rendergraph.hpp  (+6 more)
src/Vulkan/: CleanupSwapChain.cpp  CopyBuffer.cpp  CopyBufferToImage.cpp  CreateBuffer.cpp  CreateCommandBuffers.cpp  CreateCommandPool.cpp  CreateDescriptorPool.cpp  CreateDescriptorSetLayout.cpp  CreateDescriptorSets.cpp  CreateFramebuffers.cpp  CreateGraphicsPipeline.cpp  CreateImage.cpp  CreateImageView.cpp  CreateImageViews.cpp  CreateIndexBuffer.cpp  CreateInstance.cpp  CreateLogicalDevice.cpp  CreateRenderpass.cpp  CreateShaderModule.cpp  CreateSwapChain.cpp  CreateSyncObjects.cpp  CreateTextureImage.cpp  CreateTextureImageView.cpp  CreateTextureSampler.cpp  CreateUniformBuffers.cpp  CreateVertexBuffer.cpp  DrawFrame.cpp  FindMemoryType.cpp  FindQueueFamilies.cpp  IsDeviceSuitable.cpp  Open4XVulkan.cpp  Open4XVulkan.hpp  PickPhysicalDevice.cpp  QuerySwapChainSupport.cpp  RecordCommandBuffer.cpp  RecreateSwapChain.cpp  SingleTimeCommands.cpp  TransitionImageLayout.cpp  UpdateUniformBuffer.cpp  Vertex.hpp  (+37 more)
src/glTF/: AccessorLoader.cpp  AccessorLoader.hpp  GLB.cpp  GLB.hpp  GLTF.cpp  GLTF.hpp  GLTF_Types.cpp  GLTF_Types.hpp  JSON.cpp  JSON.hpp  base64.cpp  base64.hpp
src/utils/: math.cpp  math.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  Makefile  main.cpp
tools/: compare_draws.py
