cmake_minimum_required(VERSION 3.29)
set(CMAKE_CXX_COMPILER "c++")
set(CMAKE_CXX_STANDARD 23)
set(CXX_STANDARD_REQUIRED ON)

set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O3")
set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(PROJECT_NAME Open4X-Tests)
set(COMPILE_FLAGS "-march=native")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILE_FLAGS}")

project("${PROJECT_NAME}")

file(GLOB SOURCES
  *.hpp
  *.cpp
  )

add_executable("${PROJECT_NAME}" ${SOURCES})

set(ALLOW_EXTERNAL_SPIRV_TOOLS ON)

target_link_libraries("${PROJECT_NAME}" PUBLIC)

set(LIBRARY_FLAGS "")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${LIBRARY_FLAGS}")
